Added delayed transmissions
- Added delayed transmissions
- Works with reloads
- Queues multiple events

--- a/main.html
+++ b/main.html
@@ -133,6 +133,7 @@
 			</div>
 		</div>
 	</div>
+	<div id="queue"></div>
 	<!-- Core JS -->
 	<script src="assets/js/vendor.min.js"></script>
 	<script src="assets/js/app.min.js"></script>
